--- a/_meta/fields.generated.yml
+++ b/_meta/fields.generated.yml
@@ -2,7 +2,7 @@
   title: javabeat
   description:
   fields:
-    - name: threads
+    - name: counter
       type: long
       required: true
       description: >
